--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 html {
   scroll-behavior: smooth;
   margin: 0;
@@ -17,4 +16,11 @@ body {
   max-width: 100vw;
   min-width: 100vw;
   overflow-x: hidden;
+}
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0;
+  }
 }
